# wit-build-script

./: Cargo.toml  LICENCE-APACHE  LICENSE-MIT  README.md
example-project/guest/: Cargo.toml  build.rs
example-project/host/: Cargo.toml  build.rs
example-project/host/src/: lib.rs  wasm-host.rs  wasm_host.rs
example-project/wit/: plugin.wit
wit/: plugin.wit
wit-bindgen-build-script/: Cargo.toml
wit-component-build-script/: Cargo.toml
wit-component-build-script/examples/: ex1.rs
wit-guest-codegen/: Cargo.toml
wit-guest-codegen/examples/: ex.rs
wit-guest-codegen/src/: lib.rs
wit-host-codegen/: Cargo.toml
wit-host-codegen/examples/: ex1.rs
wit-host-codegen/src/: lib.rs
