[package]
name = "wit-host-codegen"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-parser = {workspace = true}

wasmtime-wit-bindgen = "7.0"