[package]
name = "guest"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# still needed for runtime
wit-bindgen = "0.7"

[build-dependencies]
wit-guest-codegen = {path = "../../wit-guest-codegen"}