[package]
name = "host"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = {version = "7.0.0", features = ["component-model"]}
[build-dependencies]
wit-host-codegen = {path = "../../wit-host-codegen"}